Add CCAC 01.Review 13

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -383,3 +383,46 @@ notes:
       ax.text(2, 2, '$y = -\\sin{2x}$')
       p._backend.show()
       ```
+- id: 1543450756169
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.Review 13: Use transformations to sketch the graph of the function.
+      $$
+      y = \frac{1}{2}(1 + e^x)
+      $$
+    Back: |
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import sympy as sy
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      def f(x): return (1 + sy.E**x)/2
+      p = sy.plot(
+        f(x),
+        xlim = (-4, 2), ylim = (-1, 3),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'): p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+      ax.tick_params(
+        axis = 'both',
+        which = 'both',
+        bottom = False,
+        left = False,
+        labelbottom = False,
+        labelleft = False,
+      )
+      ax.text(-0.5, 1 + 0.2, '$y = \\frac{1}{2}(1 + e^x)$', horizontalalignment='right')
+      ax.plot(0, 1, 'ko', markersize = 4)
+      ax.text(0.1, 1.2, '$1$')
+      ax.plot((-4, 2), (1/2, 1/2), linestyle = '--')
+      ax.text(0.5, 0.5 + 0.2, '$y = \\frac{1}{2}$')
+      p._backend.show()
+      ```
