Add CCAC 01.Review 17b

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -478,3 +478,12 @@ notes:
       $$
     Back: |
       Neither.
+- id: 1543450756469
+  fields:
+    Front: |
+      CCAC 01.Review 17b: Determine whether $f$ is even, odd, or neither even nor odd.
+      $$
+      f(x) = x^3 - x^7
+      $$
+    Back: |
+      Odd.
