Add CCAC 01.Review 17c

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -487,3 +487,12 @@ notes:
       $$
     Back: |
       Odd.
+- id: 1543450756572
+  fields:
+    Front: |
+      CCAC 01.Review 17c: Determine whether $f$ is even, odd, or neither even nor odd.
+      $$
+      f(x) = e^{-x^2}
+      $$
+    Back: |
+      Even.
