Add CCAC 01.Review 19a

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -505,3 +505,9 @@ notes:
       $$
     Back: |
       Neither.
+- id: 1543450756773
+  fields:
+    Front: |
+      CCAC 01.Review 19a: If $f(x) = \ln{x}$ and $g(x) = x^2 - 9$, find the function $f \circ g$ and its domain.
+    Back: |
+      $(f \circ g)(x) = \ln(x^2 - 9)$, $(-\infty, -3) \cup (3, \infty)$
