--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -529,3 +529,75 @@ notes:
       CCAC 01.Review 19d: If $g(x) = x^2 - 9$, find the function $g \circ g$ and its domain.
     Back: |
       $(g \circ g)(x) = (x^2 - 9)^2 - 9$, $(-\infty, \infty)$
+- id: 1543450757221
+  tags: [requiresCoding]
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.Review 21: Life expectancy improved dramatically in the 20th century. The table gives the life expectancy at birth (in years) of males born in the United States. Use a scatter plot to choose an appropriate type of model. Use your model to predict the life span of a male born in the year 2010.
+      $$
+      \begin{array}{|c|c|}
+        \hline
+        \text{Birth year} & \text{Life expectancy} \\
+        \hline
+        1900 & 48.3 \\
+        1910 & 51.1 \\
+        1920 & 55.2 \\
+        1930 & 57.4 \\
+        1940 & 62.5 \\
+        1950 & 65.6 \\
+        1960 & 66.6 \\
+        1970 & 67.1 \\
+        1980 & 70.0 \\
+        1990 & 71.8 \\
+        2000 & 73.0 \\
+        \hline
+      \end{array}
+      $$
+    Back: |
+      $y = 0.2493x - 423.4818$; about 77.6 years.
+      ```{python }
+      import matplotlib.pyplot as plt
+      import numpy as np
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = np.array((
+        1900,
+        1910,
+        1920,
+        1930,
+        1940,
+        1950,
+        1960,
+        1970,
+        1980,
+        1990,
+        2000,
+      ))
+      y = np.array((
+        48.3,
+        51.1,
+        55.2,
+        57.4,
+        62.5,
+        65.6,
+        66.6,
+        67.1,
+        70.0,
+        71.8,
+        73.0,
+      ))
+
+      m, b = np.polyfit(x, y, 1)
+
+      f = m*x + b
+
+      fig, ax = plt.subplots()
+      ax.scatter(x, y)
+      ax.plot(x, f)
+      _=_
+      print('y = {}x + {}'.format(m, b))
+      print('m*2010 + b = {}'.format(m*2010 + b))
+      ```
